# git-python-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  LICENSE  Makefile  README.rst  azure-pipelines.yml  pyproject.toml  pytest-coverage.txt  readthedocs.yml  setup.cfg
.github/workflows/: ci-build-container.yml  ci-develop.yml  ci-feature-release.yml  ci-git-release.yml  ci-main-tag.yml  ci-main.yml  ci-pull_request.yml  ci-push.yml  ci-release-main.yml  ci-release-production.yml  ci-release.yml  ci-test.yml  codeql-analysis.yml  continuous-integration.yml  continuous_integration.yml  versioning.yml
.k8s/base/: deployment.yaml  service.yaml
.k8s/overlays/development/: kustomization.yaml
.k8s/overlays/production/: kustomization.yaml
app/: __init__.py  calculator.py  cli.py
app/tests/: test_calculator.py  test_cli.py
ci/: install.yml  lint.yml  tests.yml
doc/: api.rst  changelog.rst  conf.py  index.rst  requirements.txt
htmlcov/: d_74cd4725fa363101___init___py.html  d_74cd4725fa363101_calculator_py.html  d_74cd4725fa363101_cli_py.html  index.html  simplecalc___init___py.html  simplecalc_calculator_py.html  simplecalc_cli_py.html  status.json
k8s/: kustomization.yaml  service.yaml
k8s/base/: kustomization.yaml
k8s/overlays/development/: kustomization.yaml
k8s/overlays/production/: kustomization.yaml
simplecalc/: __init__.py  calculator.py  cli.py
simplecalc/tests/: test_calculator.py  test_cli.py
